--- a/src/main/resources/br/edu/utfpr/jfile/hello-view.fxml
+++ b/src/main/resources/br/edu/utfpr/jfile/hello-view.fxml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="771.0" prefWidth="1150.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="771.0" prefWidth="1150.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox layoutY="-2.0" prefHeight="771.0" prefWidth="308.0" style="-fx-background-color: #502F7E;">
          <children>
-            <Button alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="47.0" prefWidth="308.0" stylesheets="@../style/style.css" text="Button" textFill="WHITE">
-               <padding>
-                  <Insets left="50.0" />
-               </padding>
-            </Button>
+            <Button alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="47.0" prefWidth="308.0" stylesheets="@../style/style.css" text="Button" textFill="WHITE" />
          </children></VBox>
    </children>
 </AnchorPane>
