--- a/src/main/resources/br/edu/utfpr/styles/style.css
+++ b/src/main/resources/br/edu/utfpr/styles/style.css
@@ -5,7 +5,7 @@
     -fx-background-color: #2A1C42;
 }
 .button:pressed{
-    -fx-background-color: 7156DD;
+    -fx-background-color: #7156DD;
 }
 
 .table-view .column-header,
@@ -27,10 +27,10 @@
     -fx-alignment: CENTER_LEFT;
 }
 
-.table-row-cell:select{
+.table-row-cell:selected{
     -fx-background-color: rgb(127, 172, 243);
 }
 
-.table-row-cell:select .text{
+.table-row-cell:selected .text{
     -fx-fill: white;
 }
