--- a/src/main/resources/br/edu/utfpr/jfile/main-view.fxml
+++ b/src/main/resources/br/edu/utfpr/jfile/main-view.fxml
@@ -8,10 +8,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="771.0" prefWidth="1150.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="771.0" prefWidth="1150.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.utfpr.jfile.MainController">
    <children>
       <VBox layoutY="-2.0" prefHeight="771.0" prefWidth="308.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -29,7 +30,7 @@
                   </Label>
                </children>
             </Pane>
-            <Button alignment="BASELINE_LEFT" graphicTextGap="7.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="308.0" stylesheets="@../styles/style.css" text="Manager de Vídeos" textFill="WHITE">
+            <Button alignment="BASELINE_LEFT" graphicTextGap="7.0" mnemonicParsing="false" onAction="#actionManagerVideo" prefHeight="47.0" prefWidth="308.0" stylesheets="@../styles/style.css" text="Manager de Vídeos" textFill="WHITE">
                <padding>
                   <Insets left="50.0" />
                </padding>
@@ -40,7 +41,7 @@
                   <FontAwesomeIconView fill="WHITE" glyphName="TV" size="20" />
                </graphic>
             </Button>
-            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="308.0" stylesheets="@../styles/style.css" text="Manager de Imagens" textFill="WHITE">
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#actionManagerImagens" prefHeight="47.0" prefWidth="308.0" stylesheets="@../styles/style.css" text="Manager de Imagens" textFill="WHITE">
                <padding>
                   <Insets left="50.0" />
                </padding>
@@ -63,5 +64,6 @@
                </graphic>
             </Button>
          </children></VBox>
+      <StackPane fx:id="mainPanel" layoutX="309.0" layoutY="1.0" prefHeight="771.0" prefWidth="842.0" />
    </children>
 </AnchorPane>
