--- a/src/main/resources/br/edu/utfpr/jfile/page-audio.fxml
+++ b/src/main/resources/br/edu/utfpr/jfile/page-audio.fxml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="771.0" prefWidth="842.0" style="-fx-background-color: #c0eb34;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.utfpr.jfile.PageAudio">
-
+<AnchorPane prefHeight="771.0" prefWidth="842.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.utfpr.jfile.PageAudio">
+   <children>
+      <Button layoutX="740.0" layoutY="712.0" mnemonicParsing="false" onAction="#actionUploadFile" prefHeight="45.0" prefWidth="88.0" style="-fx-background-color: #3F2B63;" text="Importar" textFill="WHITE">
+         <font>
+            <Font name="Segoe UI" size="14.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
