--- a/src/main/resources/br/edu/utfpr/jfile/page-audio.fxml
+++ b/src/main/resources/br/edu/utfpr/jfile/page-audio.fxml
@@ -1,16 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="771.0" prefWidth="842.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.utfpr.jfile.PageAudio">
+<AnchorPane fx:id="comboSpeed" prefHeight="771.0" prefWidth="842.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.utfpr.jfile.PageAudio">
    <children>
       <Button layoutX="740.0" layoutY="712.0" mnemonicParsing="false" onAction="#actionUploadFile" prefHeight="45.0" prefWidth="88.0" style="-fx-background-color: #3F2B63;" text="Importar" textFill="WHITE">
          <font>
             <Font name="Segoe UI" size="14.0" />
          </font>
       </Button>
+      <Label fx:id="songName" alignment="CENTER" layoutX="-1.0" layoutY="370.0" prefHeight="30.0" prefWidth="842.0" text="Label">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <ProgressBar fx:id="progressSong" layoutX="97.0" layoutY="400.0" prefHeight="18.0" prefWidth="642.0" progress="0.0" />
+      <Button fx:id="play" layoutX="97.0" layoutY="418.0" mnemonicParsing="false" onAction="#actionPlay" prefHeight="26.0" prefWidth="82.0" style="-fx-background-color: #3F2B63;" text="Play" textFill="WHITE" />
+      <Button fx:id="pause" layoutX="179.0" layoutY="418.0" mnemonicParsing="false" onAction="#actionPause" prefHeight="26.0" prefWidth="82.0" style="-fx-background-color: #3F2B63;" text="Pause" textFill="WHITE">
+         <font>
+            <Font name="Segoe UI" size="12.0" />
+         </font>
+      </Button>
+      <Button fx:id="reset" layoutX="261.0" layoutY="418.0" mnemonicParsing="false" onAction="#actionReset" prefHeight="26.0" prefWidth="82.0" style="-fx-background-color: #3F2B63;" text="Reset" textFill="WHITE" />
+      <Button fx:id="previous" layoutX="343.0" layoutY="418.0" mnemonicParsing="false" onAction="#actionPrevious" prefHeight="26.0" prefWidth="82.0" style="-fx-background-color: #3F2B63;" text="Previous" textFill="WHITE">
+         <font>
+            <Font name="Segoe UI" size="12.0" />
+         </font>
+      </Button>
+      <Button fx:id="next" layoutX="425.0" layoutY="418.0" mnemonicParsing="false" onAction="#actionNext" prefHeight="26.0" prefWidth="82.0" style="-fx-background-color: #3F2B63;" text="Next" textFill="WHITE" />
+      <ComboBox fx:id="speed" layoutX="507.0" layoutY="418.0" prefHeight="26.0" prefWidth="96.0" promptText="Speed" />
+      <Slider fx:id="sliderVolume" layoutX="611.0" layoutY="424.0" prefWidth="128.0" />
    </children>
 </AnchorPane>
