--- a/src/main/resources/br/edu/utfpr/jfile/page-image.fxml
+++ b/src/main/resources/br/edu/utfpr/jfile/page-image.fxml
@@ -1,13 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="771.0" prefWidth="842.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.utfpr.jfile.PageImage">
    <children>
       <Button layoutX="740.0" layoutY="712.0" mnemonicParsing="false" onAction="#actionUploadFile" prefHeight="45.0" prefWidth="88.0" style="-fx-background-color: #3F2B63;" text="Importar" textFill="WHITE">
+         <font>
+            <Font name="Segoe UI" size="14.0" />
+         </font>
+      </Button>
+      <HBox fx:id="hboxContainer" layoutX="4.0" layoutY="4.0" prefHeight="680.0" prefWidth="834.0" style="-fx-border-color: black;">
+         <children>
+            <ImageView fx:id="imageContainer" fitHeight="678.0" fitWidth="832.0" pickOnBounds="true" preserveRatio="true" />
+         </children>
+      </HBox>
+      <Button layoutX="675.0" layoutY="712.0" mnemonicParsing="false" onAction="#actionUploadFile" prefHeight="45.0" prefWidth="58.0" style="-fx-background-color: #3F2B63;" textFill="WHITE">
+         <font>
+            <Font name="Segoe UI" size="14.0" />
+         </font>
+      </Button>
+      <Button layoutX="612.0" layoutY="712.0" mnemonicParsing="false" onAction="#actionUploadFile" prefHeight="45.0" prefWidth="58.0" style="-fx-background-color: #3F2B63;" textFill="WHITE">
+         <font>
+            <Font name="Segoe UI" size="14.0" />
+         </font>
+      </Button>
+      <FontAwesomeIconView fill="WHITE" glyphName="WHATSAPP" layoutX="634.0" layoutY="743.0" size="25" wrappingWidth="13.428571701049805" />
+      <FontAwesomeIconView fill="WHITE" glyphName="AMAZON" layoutX="691.0" layoutY="743.0" size="25" />
+      <Label fx:id="imageInfo" layoutX="14.0" layoutY="738.0" text="Informação da imagem">
+         <font>
+            <Font name="Segoe UI Bold" size="14.0" />
+         </font>
+      </Label>
+      <Button fx:id="btnGoToDirectory" layoutX="523.0" layoutY="712.0" mnemonicParsing="false" onAction="#actionGoToDirectory" prefHeight="45.0" prefWidth="104.0" style="-fx-background-color: #3F2B63;" text="Ir para pasta" textFill="WHITE" AnchorPane.rightAnchor="237.0">
          <font>
             <Font name="Segoe UI" size="14.0" />
          </font>
